--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -1,46 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context=".feature.currencylist.DemoActivity">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/rootContainer"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:padding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <FrameLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bottomNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/space_large"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/container"
+        app:layout_constraintVertical_bias="1">
+
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_clear_list"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/button_height"
+            android:layout_height="wrap_content"
             android:text="@string/clear_list"
-            />
+            app:layout_constraintBottom_toTopOf="@+id/btn_to_crypto"
+            app:layout_constraintEnd_toStartOf="@+id/btn_add_instrument"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_add_instrument"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/button_height"
+            android:layout_height="wrap_content"
             android:text="@string/add_instrument"
-            />
+            app:layout_constraintBottom_toBottomOf="@+id/btn_clear_list"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_clear_list"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_to_crypto"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/button_height"
+            android:layout_height="wrap_content"
             android:text="@string/to_crypto"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/to_fiat"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_clear_list" />
+
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/to_fiat"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/button_height"
+            android:layout_height="wrap_content"
             android:text="@string/to_fiat"
-            />
+            app:layout_constraintBottom_toBottomOf="@id/btn_to_crypto"
+            app:layout_constraintEnd_toStartOf="@+id/btn_show_all"
+
+            app:layout_constraintStart_toEndOf="@+id/btn_to_crypto"
+            app:layout_constraintTop_toTopOf="@id/btn_to_crypto" />
+
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_show_all"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/button_height"
+            android:layout_height="wrap_content"
             android:text="@string/show_all"
-            />
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    
-</LinearLayout>
+
+            app:layout_constraintBottom_toBottomOf="@id/btn_to_crypto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/to_fiat"
+            app:layout_constraintTop_toTopOf="@id/btn_to_crypto" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
