--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="button_height">20dp</dimen>
     <dimen name="toolbar_height">70dp</dimen>
     <dimen name="text_17">17sp</dimen>
+    <dimen name="search_icon_size">20dp</dimen>
+    <dimen name="space_large">10dp</dimen>
+    <dimen name="empty_image_size">150dp</dimen>
+    <dimen name="initial">20sp</dimen>
+    <dimen name="initial_circle">28dp</dimen>
 </resources>
