add empty state

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="text_17">17sp</dimen>
     <dimen name="search_icon_size">20dp</dimen>
     <dimen name="space_large">10dp</dimen>
+    <dimen name="empty_image_size">250dp</dimen>
 </resources>
