--- a/app/src/main/res/layout/fragment_currency_list.xml
+++ b/app/src/main/res/layout/fragment_currency_list.xml
@@ -87,7 +87,7 @@
             android:id="@+id/tvRecommendation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/try_recommendation"
+            android:text="@{@string/try_recommendation(vm.recommendation.name)}"
             android:visibility="@{vm.empty ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
