--- a/app/src/main/res/layout/item_currency.xml
+++ b/app/src/main/res/layout/item_currency.xml
@@ -7,14 +7,30 @@
     android:padding="@dimen/space_large">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvInitial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/circle_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tvCurrencyName"
+        android:textColor="@color/white"
+        android:text="A"
+        android:gravity="center"
+        android:textSize="@dimen/initial"
+        />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvCurrencyName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvCurrencySymbol"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvInitial"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginHorizontal="@dimen/space_large"
         tools:text="currency name" />
 
     <androidx.appcompat.widget.AppCompatTextView
