--- a/app/src/main/res/layout/fragment_currency_list.xml
+++ b/app/src/main/res/layout/fragment_currency_list.xml
@@ -38,7 +38,9 @@
             app:layout_constraintBottom_toTopOf="@+id/rvCurrencyList"
             app:layout_constraintEnd_toStartOf="@+id/ivSearch"
             app:layout_constraintStart_toEndOf="@+id/ivBack"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivSearch"
@@ -54,10 +56,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvCurrencyList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etSearch" />
+            app:layout_constraintTop_toBottomOf="@id/etSearch" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivNoResults"
