--- a/app/src/main/res/layout/activity_add_currency.xml
+++ b/app/src/main/res/layout/activity_add_currency.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddCurrencyActivity">
+    tools:context=".feature.addcurrency.AddCurrencyActivity">
 
     <FrameLayout
         android:id="@+id/containerAddCurrency"
