--- a/app/src/main/res/layout/fragment_currency_list.xml
+++ b/app/src/main/res/layout/fragment_currency_list.xml
@@ -60,6 +60,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:visibility="@{vm.empty ? View.GONE : View.VISIBLE}"
             app:layout_constraintTop_toBottomOf="@id/etSearch" />
 
         <androidx.appcompat.widget.AppCompatImageView
